[metadata]
name = flowkey_dl
version = file: VERSION.txt
author = Matthias Lienhard
author_email = mali27048@gmail.com
description = "A python app to download sheet music from flowkey and save it as pdf."
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
url = https://github.com/MatthiasLienhard/flowkey_dl
project_urls =
    Bug Tracker = https://github.com/MatthiasLienhard/flowkey_dl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    numpy
    imageio
    Pillow
    matplotlib
    importlib-metadata
[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    flowkey-dl = flowkey_dl.flowkey_dl_gui:main
    flowkey-dl-cli = flowkey_dl.flowkey_dl_cli:main
      